fix to spacing on mobile layout

--- a/app/output.css
+++ b/app/output.css
@@ -813,6 +813,18 @@ video {
   top: 4%;
 }
 
+.bottom-40 {
+  bottom: 10rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.bottom-1\/4 {
+  bottom: 25%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1356,6 +1368,14 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[150\%\] {
+  min-height: 150%;
+}
+
+.min-h-\[200px\] {
+  min-height: 200px;
 }
 
 .w-0 {
